--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,18 +1,18 @@
 buildscript {
     repositories {
+        google()
         jcenter()
     }
 
-    System.properties['com.android.build.gradle.overrideVersionCheck'] = 'true'
-
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.3'
+        classpath 'com.android.tools.build:gradle:3.0.1'
         classpath 'com.google.gms:google-services:3.1.0'
     }
 }
 
 allprojects {
     repositories {
+        google()
         jcenter()
     }
 }
