--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,18 +1,22 @@
 buildscript {
     repositories {
+        mavenLocal()
         google()
         jcenter()
     }
 
+    /**
+     * Read about google services plugin:
+     * https://developers.google.com/android/guides/google-services-plugin
+     */
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
-        classpath 'com.google.gms:google-services:3.1.0'
+        classpath 'com.google.gms:google-services:3.1.1'
     }
 }
 
 allprojects {
     repositories {
-        google()
         jcenter()
     }
 }
@@ -22,8 +26,8 @@ apply plugin: 'com.android.application'
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:+'
-    compile 'com.google.firebase:firebase-core:9.6.1'
-    compile 'com.google.firebase:firebase-messaging:9.6.1'
+    compile 'com.google.firebase:firebase-core:11.0.4'
+    compile 'com.google.firebase:firebase-messaging:11.0.4'
 }
 
 android {
