Adicionado propriedade para uso nas requisições

--- a/config.json
+++ b/config.json
@@ -17,6 +17,7 @@
             "userName": "",
             "userPass": ""
         },
+        "apiKey": "",
         "baseUrl": "",
         "baseImagesUrl": ""
     },
