Arquivos qml movidos para outro diretório; arquivos de imagens e configuração movidos para novas pastas para melhor organização

--- a/plugins/Listeners/config.json
+++ b/plugins/Listeners/config.json
@@ -4,8 +4,8 @@
     "description": "The application listeners",
     "pages": [],
     "listeners": [
-        "HandleUserProfileImage.qml",
-        "ManageUserProfileUpdate.qml",
+        "Listener1.qml",
+        "Listener2.qml",
         "PushNotificationRegister.qml"
     ]
 }
