Alterações diversas nos componentes e plugins para exemplificar melhor o uso do projeto

--- a/config.json
+++ b/config.json
@@ -18,8 +18,8 @@
             "userPass": ""
         },
         "apiKey": "",
-        "baseUrl": "",
-        "baseImagesUrl": ""
+        "baseUrl": "http://localhost/lara/api",
+        "baseImagesUrl": "http://localhost/lara"
     },
     "fontSize": {
         "small": 10,
