--- a/plugins/Pages/config.json
+++ b/plugins/Pages/config.json
@@ -4,7 +4,7 @@
     "pages": [
         {
             "qml": "Page1.qml",
-            "title": "Page 1",
+            "title": "Página 1",
             "icon": "commenting",
             "order": 3,
             "roles": ["Customer"],
@@ -12,7 +12,7 @@
         },
         {
             "qml": "Page2.qml",
-            "title": "Page 2",
+            "title": "Página 2",
             "icon": "calendar",
             "order": 4,
             "roles": ["Customer"],
@@ -20,7 +20,7 @@
         },
         {
             "qml": "Page3.qml",
-            "title": "Page 3",
+            "title": "Página 3",
             "icon": "code_fork",
             "isHomePage": true,
             "order": 5,
@@ -29,7 +29,7 @@
         },
         {
             "qml": "Page4.qml",
-            "title": "Page 4",
+            "title": "Página 4",
             "icon": "calendar",
             "order": 6,
             "roles": ["Administrator"],
@@ -37,7 +37,7 @@
         },
         {
             "qml": "Page5.qml",
-            "title": "Page 5",
+            "title": "Página 5",
             "icon": "github",
             "order": 7,
             "roles": ["Administrator"],
@@ -45,7 +45,7 @@
         },
         {
             "qml": "Page6.qml",
-            "title": "Page 6",
+            "title": "Página 6",
             "icon": "mobile_phone",
             "order": 8,
             "roles": ["Editor"],
