Páginas adicionadas para serem visíveis também no layout em linha

--- a/plugins/About/config.json
+++ b/plugins/About/config.json
@@ -8,7 +8,8 @@
             "icon": "question_circle",
             "roles": ["Customer"],
             "order": 0,
-            "showInDrawer": true
+            "showInDrawer": true,
+            "showInTabBar": true
         }
     ]
 }
