Propriedade icon renomeada para awesomeIcon para evitar conflito com propriedade icon do ItemDelegate adicionado no Qt 5.10

--- a/plugins/About/config.json
+++ b/plugins/About/config.json
@@ -5,7 +5,7 @@
         {
             "qml": "AboutPage.qml",
             "title": "Sobre",
-            "icon": "question_circle",
+            "awesomeIcon": "question_circle",
             "roles": ["Customer"],
             "order": 0,
             "showInDrawer": true,
