--- a/plugins/Pages/config.json
+++ b/plugins/Pages/config.json
@@ -7,7 +7,7 @@
             "title": "Página 1",
             "awesomeIcon": "commenting",
             "order": 3,
-            "roles": ["Customer"],
+            "roles": ["customer"],
             "showInDrawer": true,
             "showInTabBar": true
         },
@@ -16,7 +16,7 @@
             "title": "Página 2",
             "awesomeIcon": "calendar",
             "order": 4,
-            "roles": ["Customer"],
+            "roles": ["customer"],
             "showInDrawer": true,
             "showInTabBar": true
         },
@@ -26,7 +26,7 @@
             "awesomeIcon": "code_fork",
             "isHomePage": true,
             "order": 5,
-            "roles": ["Customer"],
+            "roles": ["customer"],
             "showInDrawer": true,
             "showInTabBar": true
         },
@@ -35,7 +35,7 @@
             "title": "Página 4",
             "awesomeIcon": "calendar",
             "order": 6,
-            "roles": ["Administrator"],
+            "roles": ["administrator"],
             "showInDrawer": true,
             "showInTabBar": true
         },
@@ -44,7 +44,7 @@
             "title": "Página 5",
             "awesomeIcon": "github",
             "order": 7,
-            "roles": ["Administrator"],
+            "roles": ["administrator"],
             "showInDrawer": true,
             "showInTabBar": true
         },
@@ -53,7 +53,7 @@
             "title": "Página 6",
             "awesomeIcon": "mobile_phone",
             "order": 8,
-            "roles": ["Editor"],
+            "roles": ["editor"],
             "showInDrawer": true,
             "showInTabBar": true
         }
