--- a/config.json
+++ b/config.json
@@ -12,10 +12,8 @@
     "usesDrawer": true,
     "showDrawerImage": false,
     "restService": {
-        "basicAuthentication" : {
-            "userName": "enoque",
-            "userPass": "1q2w3e4r5t"
-        },
+        "userName": "enoque",
+        "userPass": "1q2w3e4r5t",
         "baseUrl": "http://192.168.43.190/lara/api",
         "baseImagesUrl": ""
     },
