--- a/plugins/Session/config.json
+++ b/plugins/Session/config.json
@@ -9,7 +9,7 @@
         {
             "qml": "ProfileView.qml",
             "title": "Meu perfil",
-            "roles": ["administrator", "customer", "editor"],
+            "roles": ["administrator", "student", "editor"],
             "awesomeIcon": "user",
             "order": 1,
             "showInDrawer": true,
@@ -18,7 +18,7 @@
         {
             "qml": "Logout.qml",
             "title": "Sair",
-            "roles": ["administrator", "customer", "editor"],
+            "roles": ["administrator", "student", "editor"],
             "awesomeIcon": "sign_out",
             "order": -1,
             "showInDrawer": true,
