Adicionado revisão geral do projeto e melhorias diversas

--- a/config.json
+++ b/config.json
@@ -11,9 +11,9 @@
     "usesDrawer": true,
     "showDrawerImage": true,
     "restService": {
-        "userName": "",
-        "userPass": "",
-        "baseUrl": ""
+        "userName": "apirest",
+        "userPass": "1q2w3e4r5t6y",
+        "baseUrl": "http://192.168.43.123:5000"
     },
     "fontSize": {
         "small": 10,
