--- a/plugins/Listeners/config.json
+++ b/plugins/Listeners/config.json
@@ -2,7 +2,7 @@
     "pages": [],
     "listeners": [
         "Listener1.qml",
-        "Listener2.qml",
+        "UpdateUserProfileImage.qml",
         "PushNotificationRegister.qml"
     ]
 }
